contrib/cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTest/namespace234573.cpp

#include "namespace234573.h"

namespace named2_234573 {

  void help_named2_234573() {

  }
  
  static int static_help_named2_234573() {
    
  }

  static inline void static_inline_help_named2_234573() {

  }
}

void use_static2_234573() {
  named2_234573::static_help_named2_234573();
  named2_234573::static_inline_help_named2_234573();
  named2_234573::help_named2_234573();
  // from header file
  named2_234573_included::static_help_named2_234573_included();
  named2_234573_included::static_inline_help_named2_234573_included();
  named2_234573_included::help_named2_234573_included();
}

